refactor: improving some methods in the classes.